[package]
name = "mics-vz-89te"
version = "0.1.0"
edition = "2021"
authors = ["Alexander Hübener <alex.teamplayer@gmail.com>", "Andreas Lautner <andy.lautner@gmail.com>"]
repository = "https://github.com/teamplayer3/mics-vz-89te.git"
description = "MICS-VZ-89TE driver implementation"
keywords = ["embedded", "mics-vz-89te", "iot", "embedded-hal-driver", "co2", "voc"]
categories = ["embedded", "hardware-support", "no-std", "co2-measuring"]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
embedded-hal = "0.2.7"

[dev-dependencies]
embedded-hal-mock = "0.8.0"