[package]
name = "mics-vz-89te"
version = "0.2.0"
edition = "2021"
authors = ["Alexander Hübener <alex.teamplayer@gmail.com>", "Andreas Lautner <andy.lautner@gmail.com>"]
repository = "https://github.com/teamplayer3/mics-vz-89te.git"
description = "MICS-VZ-89TE driver implementation"
keywords = ["embedded", "mics-vz-89te", "iot", "embedded-hal-driver", "co2-voc"]
categories = ["embedded", "hardware-support", "no-std"]
license = "Apache-2.0"
readme = "README.md"

[features]
default = ["std"]
chrono = ["dep:chrono"]
unproven = []
std = []

[dependencies]
embedded-hal = "0.2.7"
chrono = { version = "0.4.19", optional = true }

[dev-dependencies]
embedded-hal-mock = "0.8.0"