[package]
name = "mics-vz-89te"
version = "0.2.0"
edition = "2021"
authors = ["Alexander Hübener <alex.teamplayer@gmail.com>", "Andreas Lautner <andy.lautner@gmail.com>"]
repository = "https://github.com/teamplayer3/mics-vz-89te.git"
description = "MICS-VZ-89TE driver implementation"
keywords = ["embedded", "mics-vz-89te", "iot", "embedded-hal-driver", "co2-voc"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
time = ["dep:time"]
unproven = []
std = []

[dependencies]
embedded-hal = "0.2.7"
time = { version = "0.3.9", optional = true }

[dev-dependencies]
embedded-hal-mock = "0.8.0"
assert_matches = "1.5.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]